--- a/src/components/episode.css
+++ b/src/components/episode.css
@@ -1,54 +1,43 @@
-/* EpisodeList.css */
+.episode-card {
+  display: inline-flex;
+  width: 350px;
+  height: 230px;
+  padding-left: 20px;
+  background-color: #f4f4f4;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin: 15px;
+}
 
-.container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-  }
-  
-  .episode-card {
-    display: flex;
-    align-items: center;
-    padding: 20px;
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    margin-bottom: 10px;
-  }
-  
-  .episode-card:hover {
-    background-color: #e0e0e0;
-  }
-  
-  .episode-image {
-    width: 100px;
-    height: 100px;
-    margin-right: 20px;
-    object-fit: cover;
-    border-radius: 50%;
-  }
-  
-  .episode-details {
-    flex: 1;
-  }
-  
-  .episode-name {
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 5px;
-  }
-  
-  .episode-air-date {
-    font-size: 14px;
-    color: #777777;
-  }
-  
-  .episode-link {
-    font-size: 14px;
-    color: #007bff;
-    text-decoration: none;
-  }
-  
-  .episode-link:hover {
-    text-decoration: underline;
-  }
-  
+.episode-details {
+  flex: 1;
+}
+
+.character-details {
+  flex: 1;
+  margin-left: 20px;
+}
+
+.character-details h3 {
+  margin-bottom: 10px;
+}
+
+.character-details ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.character-details li {
+  margin-bottom: 5px;
+}
+
+.episode-head {
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 20px;
+  color: white;
+}
