--- a/src/components/episode.css
+++ b/src/components/episode.css
@@ -3,10 +3,10 @@
   width: 350px;
   height: 230px;
   padding-left: 20px;
-  background-color: #f4f4f4;
+  background-color: greenyellow;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin: 15px;
+  margin: 2%;
 }
 
 .episode-details {
