--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital@1&family=Yatra+One&display=swap');
+*
+{
+  font-family: 'Lato', sans-serif;
 }
-
